[package]
name = "cpm"
version = "0.1.1"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
clap = "2.33.0"
url = "2.1.0"
failure = "0.1.6"
tokio = { version = "1.0.1", features = ["full"] }
selectors = "0.21.0"
rpassword = "4.0"
itertools = "0.8"
dirs = "2.0"
cookie = "0.12"
serde_json = "1.0"
serde = "1.0.104"
walkdir = "2"
glob = "0.3.0"
colored = "1.9"
easy-scraper = "0.1"
webbrowser = "0.5.5"
unicode-xid = "0.0.4"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
branch = "master"
features = ["cookies"]

