[package]
name = "cpm"
version = "0.1.1"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
clap = "3.2.6"
url = "2.2.2"
failure = "0.1.8"
tokio = { version = "1.19.2", features = ["full"] }
selectors = "0.23.0"
rpassword = "6.0.1"
itertools = "0.10.3"
dirs = "4.0.0"
cookie = "0.16.0"
serde_json = "1.0.81"
serde = "1.0.137"
walkdir = "2.3.2"
glob = "0.3.0"
colored = "2.0.0"
easy-scraper = "0.2.0"
webbrowser = "0.7.1"
unicode-xid = "0.2.3"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
branch = "master"
features = ["cookies"]

